[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/kenney_mini_square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://LevelSelect.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -453.742, 256.108 )
color = Color( 0.352941, 0.784314, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 385.537
margin_top = 207.902
margin_right = 651.537
margin_bottom = 383.902
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 266.0
margin_bottom = 56.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 64.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 105.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 109.0
margin_right = 146.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 187.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="5" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 191.0
margin_right = 228.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "5"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 266.0
margin_bottom = 116.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 25.0
margin_right = 62.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "6"

[node name="7" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 66.0
margin_right = 103.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "7"

[node name="8" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 107.0
margin_right = 144.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "8"

[node name="9" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 148.0
margin_right = 185.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "9"

[node name="10" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 189.0
margin_right = 241.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "10"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 266.0
margin_bottom = 176.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="11" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_right = 42.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "11"

[node name="12" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 46.0
margin_right = 98.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "12"

[node name="13" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 102.0
margin_right = 154.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "13"

[node name="14" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 158.0
margin_right = 210.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "14"

[node name="15" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 214.0
margin_right = 266.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "15"

[node name="Back" type="Button" parent="."]
margin_left = 8.86427
margin_top = 9.97231
margin_right = 96.8643
margin_bottom = 53.9723
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/HBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/10" to="." method="_on_10_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/11" to="." method="_on_11_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/12" to="." method="_on_12_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/13" to="." method="_on_13_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/14" to="." method="_on_14_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/15" to="." method="_on_15_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
